<resources>
    <string name="app_name">DoSoptTemplate</string>

    <string name="tv_login_welcome">Welcome to SOPT</string>
    <string name="tv_login_id">ID</string>
    <string name="tv_login_pw">비밀번호</string>
    <string name="et_login_id_hint">아이디를 입력해주세요.</string>
    <string name="et_login_pw_hint">비밀번호를 입력해주세요.</string>
    <string name="btn_login_sing_in">로그인하기</string>
    <string name="btn_login_sign_up">회원가입</string>

    <string name="tv_mypage_name">이름</string>
    <string name="tv_mypage_id">ID</string>
    <string name="tv_mypage_id_info">admin</string>
    <string name="tv_mypage_mbti">MBTI</string>
    <string name="tv_mypage_mbti_info">ENFJ</string>

    <string name="tv_sign_up">SIGN UP</string>
    <string name="tv_sign_up_id">ID</string>
    <string name="tv_sign_up_pw">비밀번호</string>
    <string name="tv_sign_up_name">닉네임</string>
    <string name="tv_sign_up_mbti">MBTI</string>
    <string name="et_sign_up_id_hint">6글자 이상 10글자 이하로 입력해주세요.</string>
    <string name="et_sign_up_pw_hint">8글자 이상 12글자 이하로 입력해주세요.</string>
    <string name="et_sign_up_name_hint">1글자보다 길어야 합니다.</string>
    <string name="et_sign_up_mbti_hint">MBTI를 입력해주세요.</string>
    <string name="btn_sign_up">회원가입하기</string>

    <string name="tv_item_friend_name">기름이</string>
    <string name="tv_item_friend_description">나는 털에 윤기가 좔좔 기름이에요</string>

    <string name="tv_item_mine_name">꼬식이</string>
    <string name="tv_item_mine_description">내가 이 구역의 대표 강아지</string>
</resources>