<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <TextView
        android:id="@+id/tv_login_id_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="70dp"
        android:text="@string/tv_sign_up"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.044"/>

    <EditText
        android:id="@+id/et_login_id_id_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/sign_up_boarder"
        android:hint="@string/et_sign_up_id_hint"
        android:minHeight="48dp"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_login_id_welcome" />


    <EditText
        android:id="@+id/et_login_id_pw_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/sign_up_boarder"
        android:hint="@string/et_sign_up_pw_hint"
        android:minHeight="48dp"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_login_id_id_hint" />

    <TextView
        android:id="@+id/tv_signup_pw_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/et_login_id_pw_hint"
        android:text="@string/tv_signup_pw_check"
        android:textColor="#FF0000"
        android:textSize="12sp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="36dp"
        />

    <EditText
        android:id="@+id/et_sign_up_id_nametext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/sign_up_boarder"
        android:hint="@string/et_sign_up_name_hint"
        android:minHeight="48dp"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_signup_pw_check" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_sign_up_birth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/sign_up_boarder"
        android:text="@string/btn_sign_up_birth"
        android:textAlignment="textStart"
        android:textColor="#A4A4A4"
        android:minHeight="48dp"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_sign_up_id_nametext" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login_id_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="20dp"
        android:background="@color/light_gray"
        android:text="@string/btn_sign_up"
        android:enabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_sign_up_birth" />
</androidx.constraintlayout.widget.ConstraintLayout>